# hola_mundo

./: Cargo.toml  tarpaulin-report.html
src/: fabrizioperri3.rs  fabrizioperri3tarde.rs  main.rs  tp3.rs
src/coverage/: .rustc_info.json
src/coverage/debug/.fingerprint/adler-1116f4304d1673ea/: lib-adler  lib-adler.json
src/coverage/debug/.fingerprint/adler32-0f88954a88adac3c/: lib-adler32  lib-adler32.json
src/coverage/debug/.fingerprint/aho-corasick-4970b206f63cd459/: lib-aho_corasick  lib-aho_corasick.json
src/coverage/debug/.fingerprint/ansi_term-dcdb25ebe01d4d5c/: lib-ansi_term  lib-ansi_term.json
src/coverage/debug/.fingerprint/anyhow-698b3f95da117c6e/: build-script-build-script-build  build-script-build-script-build.json
src/coverage/debug/.fingerprint/anyhow-a55099c8f3f5fc40/: lib-anyhow  lib-anyhow.json
src/coverage/debug/.fingerprint/anyhow-a86dd39a6eb1204f/: run-build-script-build-script-build  run-build-script-build-script-build.json
src/coverage/debug/.fingerprint/atty-914a40d3c3f363f7/: lib-atty  lib-atty.json
src/coverage/debug/.fingerprint/autocfg-f15da40cf1beff99/: lib-autocfg  lib-autocfg.json
src/coverage/debug/.fingerprint/bitflags-238d36ea99b67de1/: lib-bitflags  lib-bitflags.json
src/coverage/debug/.fingerprint/byteorder-59924e8a902cddd1/: lib-byteorder  lib-byteorder.json
src/coverage/debug/.fingerprint/camino-499ce125a73b7ba9/: run-build-script-build-script-build  (+1 more)
src/coverage/tarpaulin/: hola_mundo-coverage.json
src/coverage/tarpaulin/profraws/: hola_mundo-c6d67c308fec8df9.exe_9180844101162116296_0-12472.profraw
(+301 files in other folders)
