[package]
name = "hola_mundo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-contract = "3.0.1"
ink-analyzer-ir = "0.7.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json ="1.0.96"
contract-transcode = "3.0.1"